force-app/main/default/objects/Journey_Path_Setting__c/Journey_Path_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Journey Path Setting</label>
</CustomObject>