force-app/main/default/objects/Journey_Path_Setting__c/fields/Journey_Name__c.field-meta.xml
<CustomField>
    <fullName>Journey_Name__c</fullName>
    <label>Journey Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>