force-app/main/default/objects/Journey_Path_Setting__c/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>