force-app/main/default/objects/Journey_Path_Setting__c/fields/Step_SLA__c.field-meta.xml
<CustomField>
    <fullName>Step_SLA__c</fullName>
    <label>Step SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>