force-app/main/default/objects/Journey_Path_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Journey_Name__c</columns>
    <columns>Step_Name__c</columns>
    <columns>Step_Order__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>